--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Poppins:wght@300&display=swap" rel="stylesheet">
  
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./news.css">
 </head>
   <body class="m-0 p-0">
     <div class="container-fluid"></div>
@@ -27,7 +27,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="./weather1.html">Weather</a>
+                    <a class="nav-link" aria-current="page" href="./weather.html">Weather</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#general" id="general">General</a>
@@ -65,7 +65,7 @@
 
    </footer>
 
-    <script src="./index.js"></script>
+    <script src="./news.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
